Add Unix domain socket support section to README
Documents the feature added in 1.12.0, including Consul agent config,
client usage, the junixsocket-core optional dependency, and JVM
native access requirements for Java 24+.